# Ami

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  REFACTORING_GUIDE.md  debug_api.py  docker-compose.dev.yml  docker-compose.yml  fix_500_error.sh  main.py  postman.json  pyproject.toml
.cursor/rules/: ami.mdc  root.mdc
.github/: copilot-instructions.md
app/: main.py
app/_legacy/api/: crawler_routes.py  main.py  rbac_routes.py  vectordb_routes.py
app/_legacy/application/: crawler_management_service.py  rbac_service.py
app/_legacy/core/: mongodb_models.py  rbac_models.py
app/_legacy/databases/: qdrant_client.py
app/api/: admin_routes.py  log_routes.py  main.py  routes.py
app/api/dependencies/: auth.py
app/api/middleware/: __init__.py  logging_middleware.py  usage_tracking.py
app/api/routes/: __init__.py  admin_approval_routes.py  admin_data_source_routes.py  admin_routes.py  admin_sync_routes.py  admin_vectordb_routes.py  chat_history_routes.py  config_routes.py  crawler_routes.py  feedback_routes.py  generate_routes.py  image_routes.py  multimodal_routes.py  profile_routes.py  smart_query_routes.py  vectordb_routes.py
app/api/schemas/: __init__.py  admin_dto.py  auth_dto.py  chat_dto.py  crawler_dto.py  data_source_dto.py  document_dto.py  image_dto.py  multimodal_dto.py  pending_update_dto.py  profile_dto.py  smart_query_dto.py  suggestion_dto.py
app/api/v1/: __init__.py  chat_api.py  rag_api.py
app/application/: factory.py  ingestion_service.py  services.py
app/application/services/: __init__.py  chat_history_service.py  conversation_context_service.py  document_service.py  feedback_service.py  (+4 more)
app/config/: __init__.py  ai.py  base.py  external.py  persistence.py  services.py  settings.py
app/core/: config.py  interfaces.py  models.py  mongodb_models.py
app/domain/: __init__.py
app/infrastructure/: __init__.py
app/schemas/: chat.py  rag.py
app/services/: chat_service.py  rag.py
app/utils/: io.py
assets/: preprocessing.ipynb
backend/: Dockerfile  main.py
backend/config/: __init__.py  base.py  constants.py  external.py  logging_config.py  persistence.py  services.py
backend/scripts/: __init__.py  clean_empty_sessions.py  seed_raw_documents.py  seed_suggested_questions.py  seed_test_profile.py
database/: init-db.sql
database/postgre/: config.env
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: Techniques.md  mongodb-connection.md  report.md
docs/usecase/: 00_INDEX.md  00_Usecase.md  01_CHAT_WORKFLOWS.md  01_ChatFlow.md  02_IngrestionFlow.md  03_UserEngagement.md  04_AdminAnalysis.md  05_ADMIN_USER_MANAGEMENT.md  05_AdminManagement.md  06_AdminNavigation.md
frontend/: .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  check-connection.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-api.html  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: admin-test.html
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: ami.json  create_admin_user.py  docker-setup.sh  ingest_data.py  init_db.sql  init_minio.py  init_stt.py  migrate_data_to_mongodb.py  test-infrastructure.sh  test_db_connections.py  verify_minio_setup.sh
tests/: script.py
vectorstore/50eecda9-4d15-4771-9ce0-159769728ecb/: index_metadata.pickle
(+571 files in other folders)
