[project]
name = "rag-system"
version = "0.1.0"
description = "Comprehensive RAG system with multiple providers"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    # Databases
    "motor>=3.3.0",          # Async MongoDB driver
    "redis[asyncio]>=5.0.1",
    "qdrant-client>=1.7.0",
    # LLM & Embeddings
    "openai>=1.12.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",
    # Document Processing
    "markitdown>=0.0.1a2",
    "pandas>=2.2.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "httpx>=0.26.0"]
