[project]
name = "ami"
version = "0.1.0"
description = "Comprehensive RAG system with multiple providers"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    # Databases
    "motor>=3.3.0", # Async MongoDB driver
    "qdrant-client>=1.7.0",
    # LLM & Embeddings
    "openai>=1.12.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",
    # Speech-to-Text
    "transformers>=4.20.0",
    "torchaudio>=2.1.0",
    "pyctcdecode>=0.4.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # Document Processing
    "markitdown>=0.0.1a2",
    "pandas>=2.2.0",
    "firecrawl-py>=1.5.0",
    "beautifulsoup4>=4.12.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
    # File Storage & Image Processing
    "minio>=7.2.0",
    "pillow>=10.1.0",
    "python-magic>=0.4.27",
    "anthropic>=0.75.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "httpx>=0.26.0"]
